--- a/app/src/main/res/layout/fragment_change_profile.xml
+++ b/app/src/main/res/layout/fragment_change_profile.xml
@@ -2,54 +2,53 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.principal.projetolivia.main.ChangeProfileFragment"
-    android:clickable="true">
+    android:clickable="true"
+    tools:context="com.principal.projetolivia.main.ChangeProfileFragment">
 
     <RelativeLayout
         android:layout_width="600dp"
         android:layout_height="400dp"
-        android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
         android:background="@drawable/fond_bois_papier">
 
         <LinearLayout
             android:layout_width="350dp"
             android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
             android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
             android:orientation="vertical">
 
             <EditText
                 android:id="@+id/textNameChangeProfile"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:ems="10"
-                android:minHeight="48dp"
-                android:paddingLeft="10dp"
                 android:layout_marginLeft="5dp"
                 android:layout_marginTop="10dp"
+                android:ems="10"
                 android:hint="@string/name"
+                android:imeOptions="actionDone"
                 android:inputType="textCapWords"
                 android:maxLength="30"
-                android:imeOptions="actionDone"/>
+                android:minHeight="48dp"
+                android:paddingLeft="10dp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
                 android:layout_marginLeft="5dp"
                 android:layout_marginTop="10dp"
-                >
+                android:orientation="horizontal">
 
                 <EditText
                     android:id="@+id/textAgeChangeProfile"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_weight="1"
                     android:ems="10"
                     android:hint="@string/date_naissance"
-                    android:paddingLeft="10dp"
                     android:minHeight="48dp"
-                    android:layout_weight="1"/>
+                    android:paddingLeft="10dp" />
 
             </LinearLayout>
 
@@ -59,18 +58,19 @@
                 android:layout_width="250dp"
                 android:layout_height="50dp"
                 android:layout_gravity="center_horizontal"
-                android:background="@drawable/round_background_normal"
-                android:layout_marginTop="20dp">
+                android:layout_marginTop="20dp"
+                android:background="@drawable/round_background_normal">
+
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@string/validate"
                     android:layout_centerInParent="true"
                     android:gravity="center"
+                    android:text="@string/validate"
                     android:textColor="@color/normal_white"
-                    android:textSize="20dp"/>
+                    android:textSize="20dp" />
             </RelativeLayout>
-            
+
         </LinearLayout>
 
     </RelativeLayout>
