--- a/app/src/main/res/layout/item_grid_game.xml
+++ b/app/src/main/res/layout/item_grid_game.xml
@@ -19,6 +19,7 @@
             android:layout_height="100dp"
             android:ems="10"
             android:gravity="center"
+            android:textSize="20dp"
             android:textColor="@color/normal_white"/>
     </RelativeLayout>
 
