--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -3,6 +3,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <com.principal.projetolivia.com.principal.projetolivia.util.CropImageView
+        android:id="@+id/gameBackground"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scaleType="matrix" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
