--- a/app/src/main/res/layout/activity_new_profile.xml
+++ b/app/src/main/res/layout/activity_new_profile.xml
@@ -4,6 +4,11 @@
     android:layout_height="match_parent"
     tools:context=".main.NewProfileFragment">
 
+    <com.principal.projetolivia.com.principal.projetolivia.util.CropImageView
+        android:id="@+id/newProfileBackground"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scaleType="matrix" />
 
     <LinearLayout
         android:layout_width="350dp"
