--- a/app/src/main/res/layout/activity_stats.xml
+++ b/app/src/main/res/layout/activity_stats.xml
@@ -1,8 +1,12 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.principal.projetolivia.main.ProfileFragment">
+    android:layout_height="match_parent">
+
+    <com.principal.projetolivia.com.principal.projetolivia.util.CropImageView
+        android:id="@+id/profileBackground"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scaleType="matrix" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -31,12 +35,12 @@
                 android:paddingRight="25dp">
 
                 <TextView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:id="@+id/profileNameText"
-                android:text="UserName"
-                android:textSize="25sp"
-                android:gravity="center"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:id="@+id/profileNameText"
+                    android:text="UserName"
+                    android:textSize="25sp"
+                    android:gravity="center"
                     android:textColor="@color/normal_white"/>
 
             </LinearLayout>
