--- a/app/src/main/res/layout/activity_subjects.xml
+++ b/app/src/main/res/layout/activity_subjects.xml
@@ -3,6 +3,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <com.principal.projetolivia.com.principal.projetolivia.util.CropImageView
+        android:id="@+id/subjectsBackground"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scaleType="matrix" />
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
