--- a/app/src/main/res/layout/activity_subjects.xml
+++ b/app/src/main/res/layout/activity_subjects.xml
@@ -1,9 +1,13 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:materialdesign="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.principal.projetolivia.main.SubjectsFragment">
+    android:layout_height="match_parent">
+
+    <com.principal.projetolivia.com.principal.projetolivia.util.CropImageView
+        android:id="@+id/subjectsBackground"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scaleType="matrix" />
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -11,14 +15,14 @@
         android:layout_above="@+id/profile">
 
         <GridView
+            android:id="@+id/gridSubjects"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:numColumns="3"
-            android:id="@+id/gridSubjects"
-            android:gravity="center"
+            android:layout_centerInParent="true"
             android:columnWidth="@dimen/subjects_button_size"
-            android:stretchMode="spacingWidthUniform"
-            android:layout_centerInParent="true">
+            android:gravity="center"
+            android:numColumns="3"
+            android:stretchMode="spacingWidthUniform">
 
         </GridView>
 
@@ -26,15 +30,15 @@
 
 
     <RelativeLayout
+        android:id="@id/profile"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:paddingRight="20dp"
-        android:paddingLeft="20dp"
-        android:paddingBottom="@dimen/subjects_options_vertical_padding"
-        android:paddingTop="@dimen/subjects_options_vertical_padding"
         android:background="#7aa552"
-        android:id="@id/profile">
+        android:paddingBottom="@dimen/subjects_options_vertical_padding"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
+        android:paddingTop="@dimen/subjects_options_vertical_padding">
 
 
         <com.gc.materialdesign.views.ButtonFloat
@@ -42,7 +46,7 @@
             android:layout_width="40dp"
             android:layout_height="40dp"
             materialdesign:animate="false"
-            materialdesign:iconDrawable="@drawable/options"/>
+            materialdesign:iconDrawable="@drawable/options" />
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -53,29 +57,19 @@
                 android:id="@+id/userNameText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="User"
                 android:layout_gravity="center_vertical"
                 android:paddingRight="20dp"
-                android:textSize="20dp"
+                android:text="User"
                 android:textColor="@color/normal_white"
-                />
+                android:textSize="20dp" />
 
             <com.gc.materialdesign.views.ButtonFloat
                 android:id="@+id/userName"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 materialdesign:animate="false"
-                materialdesign:iconDrawable="@drawable/ombre_blanche_olivia"/>
-
-            <com.gc.materialdesign.views.ButtonFloat
-                android:layout_marginLeft="10dp"
-                android:id="@+id/achievements"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                materialdesign:animate="false"
-                materialdesign:iconDrawable="@drawable/achievement_button"/>
+                materialdesign:iconDrawable="@drawable/ombre_blanche_olivia" />
         </LinearLayout>
-
 
 
     </RelativeLayout>
