--- a/app/src/main/res/layout/item_grid_achievements.xml
+++ b/app/src/main/res/layout/item_grid_achievements.xml
@@ -6,18 +6,23 @@
     android:paddingBottom="20dp">
 
     <LinearLayout
+        android:background="#CCFFFFFF"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:padding="5dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp">
 
         <ImageView
+            android:id="@+id/achievementImage"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:src="@drawable/gold_medal"
             android:layout_gravity="center_vertical"/>
 
         <LinearLayout
-            android:layout_width="150dp"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_gravity="center_vertical">
